<resources>
    <string name="app_name">Qash</string>

    <string name="thank_you_for_registering_with_us_nplease_type_the_otp_as_shared_to_you">Thank You for registering with us\n please enter the Otp as shared to you!</string>
    <string name="terms">Legal smoking age required. Health risks\nacknowledged. Delivery facilitation, not \nendorsement. Compliance responsibility.\nInformation provided for reference.\nRelease of liability.</string>
    <string name="default_web_client_id">value</string>
    <string name="smoking_is_injurious_to_health.">smoking is injurious to health</string>
    <string name="delivery_app_for_legal_tobacco_products_the_usage_of_the_legal_tobacco_product_cigarette_delivery_software_app_offered_by_your_company_name_company_to_its_clients_is_governed_by_these_terms_and_conditions_agreement_you_user_agree_to_be_bound_by_these_terms_and_conditions_by_accessing_and_using_the_app_please_don_t_use_the_app_if_you_don_t_agree_to_these_terms">
        Delivery App for Legal Tobacco Products.\n
        The usage of the legal tobacco product cigarette \n
        delivery software (App) offered by [Your Company Name]\n
        (Company) to its clients is governed by these\n
        terms and conditions (Agreement) You (User)\n
        agree to be bound by these terms and conditions\n
        by accessing and using the App. Please don\'t use \n
        the App if you don\'t agree to these terms</string>
    <string name="detail">
1.	Age Verification:\n a. The User must be of legal smoking age in their jurisdiction to use the App.\n
        b. The User acknowledges and agrees to provide accurate and truthful information regarding their age during the registration process.\n
        c. The Company reserves the right to request additional age verification documentation if necessary.\n


\n 2.	User Account:\n a. The User is responsible for maintaining the confidentiality and security of their account credentials.
        \n b. The User agrees to notify the Company immediately of any unauthorized use or access to their account.\n
\n 3.	Product Availability:\n a. The availability of tobacco products on the App is subject to local laws, regulations, and restrictions.
        \n  b. The Company reserves the right to modify, update, or remove any products from the App without prior notice.\n
\n 4.	Ordering and Delivery:\n  a. The User acknowledges that the delivery of tobacco products is subject to legal restrictions and regulations.
        b. The User agrees to provide accurate delivery information, including address and contact details, to ensure the successful delivery of ordered products.
        \n  c. The User is responsible for any applicable taxes, duties, or fees associated with the purchase and delivery of tobacco products.\n
\n 5.	Prohibited Activities:\n  a. The User agrees not to use the App for any unlawful, fraudulent, or unauthorized purposes.\n
        b. The User shall not resell or distribute tobacco products purchased through the App.\n
        c. The User shall not engage in any activity that may disrupt or interfere with the functioning of the App or compromise its security.\n
\n 6.	Limitation of Liability:\n
        a. The Company shall not be liable for any damages, losses, or liabilities arising from the use of the App or the purchase and delivery of tobacco products.
        \n b. The User acknowledges that the Company does not guarantee the accuracy, completeness, or reliability of the information provided on the App.\n
\n 7.	Intellectual Property:\n  a. All intellectual property rights associated with the App, including trademarks, logos, and content, belong to the Company.\n
        b. The User shall not use, copy, modify, or distribute any intellectual property of the Company without prior written consent.\n
\n 8.	Amendments:\n  a. The Company reserves the right to amend or modify these terms and conditions at any time.
        \n b. The User will be notified of any changes through the App or via email. \n
        c. Continued use of the App after the modifications shall constitute acceptance of the amended terms and conditions.\n
\n 9.	Governing Law and Jurisdiction:\n  a. This Agreement shall be governed by and interpreted in accordance with the laws of [Jurisdiction]. \n
        b. Any disputes arising out of or in connection with this Agreement shall be subject to the exclusive jurisdiction of the courts of [Jurisdiction].
\n Please review these terms and conditions carefully before using the App. If you have any questions or concerns, please contact our customer support team at [qashlgao@gmail.com].\n
\n By using the App, you confirm that you have read, understood, and agree to be bound by these terms and conditions.</string>
    <string name="a_the_user_must_be_of_legal_smoking_age_in_their_jurisdiction_to_use_the_app">a. The User must be of legal smoking age in their jurisdiction to use the App.</string>
    <string name="b_the_user_acknowledges_and_agrees_to_provide_accurate_and_truthful_information_regarding_their_age_during_the_registration_process">b. The User acknowledges and agrees to provide accurate and truthful information regarding their age during the registration process.</string>
    <string name="c_the_company_reserves_the_right_to_request_additional_age_verification_documentation_if_necessary">c. The Company reserves the right to request additional age verification documentation if necessary.</string>
    <string name="_3_product_availability">3. Product Availability:</string>
    <string name="a_the_availability_of_tobacco_products_on_the_app_is_subject_to_local_laws_regulations_and_restrictions">a. The availability of tobacco products on the App is subject to local laws, regulations, and restrictions.</string>
    <string name="_4_ordering_and_delivery">4. Ordering and Delivery:</string>
    <string name="a_the_user_acknowledges_that_the_delivery_of_tobacco_products_is_subject_to_legal_restrictions_and_regulations">a. The User acknowledges that the delivery of tobacco products is subject to legal restrictions and regulations.</string>
    <string name="b_the_user_agrees_to_provide_accurate_delivery_information_including_address_and_contact_details_to_ensure_the_successful_delivery_of_ordered_products">b. The User agrees to provide accurate delivery information, including address and contact details, to ensure the successful delivery of ordered products.</string>
    <string name="c_the_user_is_responsible_for_any_applicable_taxes_duties_or_fees_associated_with_the_purchase_and_delivery_of_tobacco_products">c. The User is responsible for any applicable taxes, duties, or fees associated with the purchase and delivery of tobacco products.</string>
    <string name="_5_prohibited_activities">5. Prohibited Activities:</string>
    <string name="a_the_user_agrees_not_to_use_the_app_for_any_unlawful_fraudulent_or_unauthorized_purposes">a. The User agrees not to use the App for any unlawful, fraudulent, or unauthorized purposes.</string>
    <string name="b_the_user_shall_not_resell_or_distribute_tobacco_products_purchased_through_the_app">b. The User shall not resell or distribute tobacco products purchased through the App.</string>
    <string name="c_the_user_shall_not_engage_in_any_activity_that_may_disrupt_or_interfere_with_the_functioning_of_the_app_or_compromise_its_security">c. The User shall not engage in any activity that may disrupt or interfere with the functioning of the App or compromise its security.</string>
    <string name="_7_intellectual_property">7. Intellectual Property:</string>
    <string name="b_the_user_shall_not_use_copy_modify_or_distribute_any_intellectual_property_of_the_company_without_prior_written_consent">b. The User shall not use, copy, modify, or distribute any intellectual property of the Company without prior written consent.</string>
    <string name="a_all_intellectual_property_rights_associated_with_the_app_including_trademarks_logos_and_content_belong_to_the_company">a. All intellectual property rights associated with the App, including trademarks, logos, and content, belong to the Company.</string>
    <string name="terms_and_conditions_legal_tobacco_product_cigarette_delivery_app_these_terms_and_conditions_agreement_govern_the_use_of_the_legal_tobacco_product_cigarette_delivery_app_app_provided_by_your_company_name_company_to_its_customers_by_accessing_and_using_the_app_you_user_agree_to_be_bound_by_these_terms_and_conditions_if_you_do_not_agree_to_these_terms_please_refrain_from_using_the_app">Terms and Conditions: Legal Tobacco Product Cigarette Delivery App These terms and conditions (Agreement) govern the use of the legal tobacco product cigarette delivery app QASH provided by Qash.com.pk to its customers. By accessing and using the App, you (User) agree to be bound by these terms and conditions. If you do not agree to these terms, please refrain from using the App.</string>
</resources>